# activity-insights-cli

./: CROSS_COMPILING.txt  Cargo.toml  README.md  common-packages.txt  file_io.go  file_io_test.go  go.mod  go.sum  main.go  pulses.go  pulses_test.go  register.go  register_test.go  sample-editor-pulse.json  structs.go  terms-of-service
.github/workflows/: deploy.yaml  test.yaml
src/: constants.rs  credentials.rs  lib.rs  pulses.rs
src/codegen/: packages-set.rs
tests/: credentials-flow.rs  smoke-test.rs
