[package]
name = "activity_insights_cli"
version = "0.1.0"
authors = ["connor-monks <monkslc@gmail.com>"]
edition = "2018"
default-run = "activity-insights"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.13"
dirs = "3.0.1"
fs2 = "0.4.3"
hyperpolyglot = "0.1.7"
log = "0.4.11"
log4rs = "0.13.0"
phf = "0.8.0"
phf_codegen = "0.8.0"
polyglot_tokenizer = "0.2.1"
reqwest = { version = "0.10", features = ["blocking", "json"] }
serde = { version = "1.0.114", features = ["derive"] }
serde_json = "1.0.57"
serde_yaml = "0.8.13"
tempfile = "3.1.0"
thiserror = "1.0.20"
uuid = { version = "0.8.1", features = ["serde", "v4"] }

[dev-dependencies]
assert_cmd = "1.0.1"
ctor = "0.1.15"
env_logger = "0.7.1"

[[bin]]
name = "activity-insights"
path = "src/bin/main.rs"
